--- a/TechApp/Views/Category/Index.cshtml
+++ b/TechApp/Views/Category/Index.cshtml
@@ -1,6 +1,18 @@
 ﻿@model List<Category>
 
-<h1>Category List</h1>
+<div class="container">
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h2 class="text-primary">
+                Category List
+            </h2>
+        </div>
+        <div class="col-6 text-end">
+            <a asp-action="Create" class="btn btn-primary">
+                Create New Category <i class="bi bi-file-plus"></i>
+            </a>
+        </div>
+    </div>
 <table class="table table-bordered table-striped">
     <thead>
     <tr>
@@ -9,6 +21,9 @@
         </th>
         <th>
             Display Order
+        </th>
+        <th>
+
         </th>
     </tr>
     </thead>
@@ -22,7 +37,18 @@
                 <td>
                     @obj.DisplayOrder
                 </td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <i class="bi bi-pencil"></i> Edit
+                        </a>
+                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                                <i class="bi bi-x-lg"></i> Delete
+                        </a>
+                    </div>
+                </td>
             </tr>
         }
     </tbody>
 </table>
+</div>
