--- a/TechApp/Views/Category/Create.cshtml
+++ b/TechApp/Views/Category/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Category
+﻿
+@model Category
 
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
