--- a/TechApp/Views/Category/Edit.cshtml
+++ b/TechApp/Views/Category/Edit.cshtml
@@ -1,35 +1,46 @@
 ﻿@model Category
 
-<form method="post">
-    <input asp-for="Id" hidden />
-    <div class="border p-3 mt-4">
-        <div class="row pb-2">
-            <h2 class="text-primary">Edit Category</h2>
-            <hr />
-        </div>
-        <div asp-validation-summary="ModelOnly"></div>
-        <div class="mb-3 row">
-            <label>Category Name</label>
-            <input asp-for="Name" type="text" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row">
-            <label>Display Order</label>
-            <input asp-for="DisplayOrder" type="text" class="form-control" />
-            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
-        </div>
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
-            <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control" style="width:150px">Update</button>
-            </div>
-            <div class="col-6 col-md-3">
-                <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary form-control" style="width:150px">
-                    Back To List
-                </a>
+            <div class="col-12 text-center">
+                <h2 class="text-white">Edit Category</h2>
             </div>
         </div>
     </div>
-</form>
+    <div class="card-body p-4">
+        <form method="post">
+            <input asp-for="Id" hidden />
+            <div class="border p-3 mt-4">
+                <div class="row pb-2">
+                </div>
+                <div asp-validation-summary="ModelOnly"></div>
+                <div class="mb-3 row">
+                    <label>Category Name</label>
+                    <input asp-for="Name" type="text" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row">
+                    <label>Display Order</label>
+                    <input asp-for="DisplayOrder" type="text" class="form-control" />
+                    <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+                </div>
+                <div class="row">
+                    <div class="col-6 col-md-3">
+                        <button type="submit" class="btn btn-primary form-control" style="width:150px">Update</button>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary form-control" style="width:150px">
+                            Back To List
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
 
 @section Scripts {
     @{
