--- a/TechApp/Areas/Admin/Views/Product/Index.cshtml
+++ b/TechApp/Areas/Admin/Views/Product/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="col-6">
             </div>
             <div class="col-6 text-end">
-                <a asp-action="Create" class="btn btn-primary">
+                <a asp-action="Upsert" class="btn btn-primary">
                     Create New Product <i class="bi bi-file-plus"></i>
                 </a>
             </div>
@@ -50,7 +50,7 @@
                         </td>
                         <td>
                             <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                     <i class="bi bi-pencil"></i> Edit
                                 </a>
                                 <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
