--- a/TechApp/Views/Shared/_Layout.cshtml
+++ b/TechApp/Views/Shared/_Layout.cshtml
@@ -62,6 +62,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.tiny.cloud/1/o8hbvzz77lvjvv1yve0ek18udvullgtb6d1c0ptoknvlakph/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
