--- a/TechApp/Areas/Admin/Views/Product/Index.cshtml
+++ b/TechApp/Areas/Admin/Views/Product/Index.cshtml
@@ -18,7 +18,7 @@
                 </a>
             </div>
         </div>
-        <table class="table table-bordered table-striped">
+        <table id="tblData" class="table table-bordered table-striped" style="width: 100%">
             <thead>
                 <tr>
                     <th>Title</th>
@@ -29,38 +29,10 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
-                @foreach (var obj in Model)
-                {
-                    <tr>
-                        <td>
-                            @obj.Title
-                        </td>
-                        <td>
-                            @obj.ISBN
-                        </td>
-                        <td>
-                            @obj.ListPrice
-                        </td>
-                        <td>
-                            @obj.Manufacturer
-                        </td>
-                        <td>
-                            
-                        </td>
-                        <td>
-                            <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-                                    <i class="bi bi-pencil"></i> Edit
-                                </a>
-                                <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-                                    <i class="bi bi-x-lg"></i> Delete
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                }
-            </tbody>
         </table>
     </div>
 </div>
+
+@section Scripts{
+    <script src="~/js/product.js"></script>
+}
