Added details action

--- a/TechApp/Areas/Customer/Views/Home/Index.cshtml
+++ b/TechApp/Areas/Customer/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 			<div class="row p-2">
 				<div class="col-12 p-1">
 					<div class="card border-0 p-3 shadow border-top border-5 rounded">
-						<img src="@product.ImageUrl" class="card-img-top rounded" />
+						<img src="@product.ImageUrl" class="card-img-top rounded" style="width:400px; height:400px" />
 						<div class="card-body pb-0">
 							<div class="pl-1">
 								<p class="card-title h5 text-dark opacity-75 text-uppercase text-center">@product.Title</p>
@@ -21,7 +21,7 @@
 							</div>
 						</div>
 						<div>
-							<a href="#" class="btn btn-primary bg-gradient border-0 form-control">
+							<a asp-action="Details" asp-route-id="@product.Id" class="btn btn-primary bg-gradient border-0 form-control">
 								Details
 							</a>
 						</div>
