--- a/TechApp/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TechApp/Areas/Identity/Pages/Account/Login.cshtml
@@ -56,10 +56,9 @@
             </div>
     </div>
 
-    <div class="col-md-12">
+    <div class="col-md-12 p-3 text-center">
         <section>
             <p class="divider-text d-flex pt-2">or</p>
-            <h3>Use another service to log in.</h3>
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
