--- a/TechApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TechApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -81,10 +81,9 @@
     </div>
 </div>
 
-    <div class="col-md-12">
+    <div class="col-md-12 p-3 text-center">
         <section>
             <p class="divider-text d-flex pt-2">or</p>
-            <h3>Use another service to register.</h3>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
